--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -20,7 +20,6 @@ html,
 body {
   margin: 0;
   padding: 0;
-
 }
 
 .content {
@@ -28,4 +27,67 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.loader {
+  position: relative;
+  display: flex;
+}
+
+.content span {
+  color: var(--primaryColor);
+  margin: 0 15px;
+  font-size: 8em;
+  font-weight: bold;
+  animation: animate 2.4s linear infinite;
+}
+
+.content span:nth-child(1) {
+  animation-delay: 0s;
+}
+
+.content span:nth-child(2) {
+  animation-delay: .2s;
+}
+
+.content span:nth-child(3) {
+  animation-delay: 0.4s;
+}
+
+.content span:nth-child(4) {
+  animation-delay: 0.6s;
+}
+
+.content span:nth-child(5) {
+  animation-delay: 0.8s;
+}
+
+.content span:nth-child(6) {
+  animation-delay: 1s;
+}
+
+.content span:nth-child(7) {
+  animation-delay: 1.2s;
+}
+
+.content span:nth-child(8) {
+  animation-delay: 1.4s;
+}
+
+@keyframes animate {
+  0% {
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0);
+    transform: scale(1);
+  }
+
+  40% {
+    text-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+    transform: scale(1.4);
+  }
+
+  80%,
+  100% {
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0);
+    transform: scale(1);
+  }
 }
